<resources>
    <string name="app_name">Android Starter</string>
    <string name="counter_value">Counter: %1$d</string>
    <string name="increment">Increment</string>
    <string name="reset">Reset</string>
</resources>
